--- a/src/css/mailbox.scss
+++ b/src/css/mailbox.scss
@@ -40,4 +40,9 @@
     font-size: 13px;
     color: $light;
   }
+
+  &__email {
+    margin-bottom: 32px;
+    color: $light;
+  }
 }
