--- a/src/css/write-space.scss
+++ b/src/css/write-space.scss
@@ -17,5 +17,9 @@
   &__clear {
     margin-top: 32px;
   }
+
+  &__cancel {
+    margin-top: 32px;
+  }
 }
 
